<resources>
    <string name="app_name">FoxBike</string>
    <string name="speed_label">Speed</string>
    <string name="odometer_label">Odometer</string>
    <string name="trip_label">Trip</string>
    <string name="start_button">Start</string>
    <string name="stop_button">Stop</string>
    <string name="unit_kmh">km/h</string>
    <string name="unit_mph">mph</string>
    <string name="confirm_stop_title">Stop session?</string>
    <string name="confirm_stop_message">Are you sure you want to stop tracking?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="unit_km">km</string>
    <string name="unit_mi">mi</string>
    <string name="permission_denied">Location permission is required for speed tracking.</string>
    <string name="settings">Settings</string>
    <string name="language">Language</string>
    <string name="reset_odometer">Reset Odometer</string>
    <string name="units">Units</string>
    <string name="version">Version 3.0</string>
    <string name="enter_code">Enter secret code</string>
    <string name="demo_mode_enabled">Demo Mode Enabled</string>
    <string name="demo_mode_disabled">Demo Mode Disabled</string>
    <string name="fake_speed">Fake Speed</string>
    <string name="fake_odometer">Fake Odometer</string>
    <string name="fake_trip">Fake Trip</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="map">Map</string>
    <string name="use_maps_beta">Enable Maps (Beta)</string>
    <string name="no_telemetry_note">No telemetry, no logs. Your data stays on your device.</string>
    <string name="avg_speed">Avg Speed</string>
    <string name="max_speed">Max Speed</string>
    <string name="time">Time</string>
    <string name="calories">Calories</string>
    <string name="elevation">Elevation</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="history">History</string>
    <string name="statistics">Statistics</string>
    <string name="weight">User Weight (kg)</string>
    <string name="wind_unit">Wind Speed Unit</string>
    <string name="unit_ms">m/s</string>
    <string name="confirm_reset_odometer">Are you sure you want to reset the odometer to zero?</string>
    <string name="voice_feedback">Voice Feedback</string>
    <string name="service_reminder">Service Reminder</string>
    <string name="oil_chain_reminder">Time to oil your chain!</string>
    <string name="weather_location">Weather Location (City)</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="weather">Weather</string>
    <string name="wind">Wind</string>
    <string name="export_gpx">Export GPX</string>
    <string name="gpx_exported">GPX file exported to downloads</string>
    <string name="service_settings">Service Reminder Settings</string>
    <string name="service_interval">Interval (km)</string>
    <string name="service_message">Reminder Message</string>
    <string name="welcome_text">Welcome to FoxBike!</string>
    <string name="next_button">Next</string>
    <string name="enter_name">Enter your name</string>
    <string name="vehicle_type">Vehicle type</string>
    <string name="bicycle">Bicycle</string>
    <string name="e_scooter">E-scooter</string>
    <string name="motorcycle">Motorcycle</string>
    <string name="bicycle_ready">bicycle</string>
    <string name="e_scooter_ready">e-scooter</string>
    <string name="motorcycle_ready">motorcycle</string>
    <string name="ready_title">You are ready!</string>
    <string name="home_tab">Home</string>
    <string name="settings_tab">Settings</string>
    <string name="ready_to_ride">Ready to ride your %s?</string>
    <string name="start_trip">Start Trip</string>
    <string name="stop_trip">Stop Trip</string>
    <string name="trip_stats">Trip stats</string>
    <string name="trips">Trips</string>
    <string name="full_app_reset">Full App Reset</string>
    <string name="confirm_full_reset">Are you sure you want to reset everything? This will return you to the setup menu.</string>
    <string name="unit_temp_c">°C</string>
    <string name="unit_temp_f">°F</string>
    <string name="use_old_ui">Use Old UI</string>
    <string name="use_new_ui">Use New UI</string>
    <string name="confirm_ui_switch">Are you sure you want to switch the interface? The app will restart.</string>
    <string name="statistics_btn">Statistics</string>
    <string name="edit_name">Change Name</string>
    <string name="edit_vehicle">Change Vehicle</string>
    <string name="check_updates">Check for Updates</string>
    <string name="update_available">New update available!</string>
    <string name="no_update">You have the latest version.</string>
    <string name="downloading">Downloading update...</string>
    <string name="install_update">Install Update</string>
    <string name="branch_switched">Updater switched to %s branch.</string>
    <string name="hi_name">Hi %s!</string>
    <string name="disable_maps">Disable Maps</string>
    <string name="disable_updater">Disable Updater</string>
    <string name="feature_selection">Optional features</string>
    <string name="delete_trip">Delete Trip</string>
    <string name="confirm_delete_trip">Are you sure you want to delete this trip?</string>
    <string name="stat_placeholder" translatable="false">0.0</string>
    <string name="odo_format" translatable="false">ODO: %s</string>
</resources>